# logchuck

./: Cargo.toml  LICENSE  README.md
config/: log4rs.yaml
src/: app.rs  main.rs  mergeline.rs  text.rs  timestamp.rs
src/mergeline/: test.rs
src/text/: test.rs
src/timestamp/: test.rs
