[package]
name = "logchuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
futures = "0.3"
tokio = { version = "1.26.0", features = ["full"] }
chrono = "0.4.24"
log = { version = "^0.4.17", features = ["std"] }
log4rs = "1.2.0"